force-app/main/default/objects/OCLQS_Integration_Settings__mdt/OCLQS_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Store environment related integration parameters
Integration Team</description>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>