force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Attribute_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_1_Value__c</fullName>
    <label>Attribute 1 Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>