force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Attribute_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Attribute_3_Description__c</fullName>
    <label>Attribute 3 Description</label>
    <type>TextArea</type>
</CustomField>