force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Capture_Messages__c.field-meta.xml
<CustomField>
    <fullName>Capture_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Messages</label>
    <type>Checkbox</type>
</CustomField>