force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Enable_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Debug</label>
    <type>Checkbox</type>
</CustomField>