force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Environment_Name__c</fullName>
    <description>Name of SFDC environment for which integration connection details are captured</description>
    <label>Environment Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>DEVBUILD</fullName>
                <default>true</default>
                <label>DEVBUILD</label>
            </value>
            <value>
                <fullName>MOCK-1</fullName>
            </value>
            <value>
                <fullName>MOCK-2</fullName>
            </value>
            <value>
                <fullName>MOCKBUILD</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>TRN</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>EMER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>