force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Error_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Email Notification</label>
    <type>Checkbox</type>
</CustomField>