force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Error_Email_Notification_Group__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Notification_Group__c</fullName>
    <inlineHelpText>Multiple email address comma seperated</inlineHelpText>
    <label>Error Email Notification Group</label>
    <type>TextArea</type>
</CustomField>