force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Target_Connection_Port__c.field-meta.xml
<CustomField>
    <fullName>Target_Connection_Port__c</fullName>
    <description>Target environment connection port number</description>
    <label>Target Connection Port</label>
    <length>10</length>
    <type>Text</type>
</CustomField>