force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Target_Connection_URL__c.field-meta.xml
<CustomField>
    <fullName>Target_Connection_URL__c</fullName>
    <description>Target environment connection url</description>
    <label>Target Connection URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>