force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Target_Credentail_Token_OAuth_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Credentail_Token_OAuth_Key__c</fullName>
    <label>Target Credentail Token/OAuth Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>