force-app/main/default/objects/OCLQS_Integration_Settings__mdt/fields/Target_Credentail_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Credentail_User_Id__c</fullName>
    <label>Target Credentail User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>